refactor(I18n): replace new Locale() to Locale.of()